--- a/src/Components/css/Cover.css
+++ b/src/Components/css/Cover.css
@@ -69,6 +69,12 @@
     border-top-right-radius: 0.2em;
     border-top: 0.1em solid white;
     border-right: 0.1em solid white;
+    transition: all 0.5s ease;
+    cursor: pointer;
+}
+
+.fileExists:hover {
+    box-shadow: 0px 0px 15px 15px rgba(229,160,13,0.9);
 }
 
 .quality button {
